--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-scroll-to-bottom": "^4.1.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "socket.io": "^3.1.1",
+    "socket.io-client": "^3.1.1",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
